--- a/index.html
+++ b/index.html
@@ -9,12 +9,24 @@
 </head>
 <body>
     <header class="container text-center my-4">
-        <img src="" alt="">
-        <h1>Olá ! Eu sou Fernanda</h1>
+        <img src="https://via.placeholder.com/150" alt="Avatar" class="rounded-circle mb-3">
+        <h1>Olá ! Eu sou Roberto</h1>
         <p class="lead">Ensino programação para joven estudantes.</p>
     </header>
     <main class="container my-5">
-        <h2 class="text-center mb-4"
-    
+        <h2 class="text-center mb-4">Projeto Em Detaque</h2>
+        <div class="card mx-auto" style="max widht: 400px;">
+        <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="imagem do projeto"
+        <div class="cardy-body">
+            <h5 class="cardy-title">Minha Bliblioteca Web</h5>
+            <p class="card-text">Uma pagina com meu livros faoritos, feita com HTML e CSS.</p>
+            <a href="#" class="btn btn-link">Ver projeto</a>
+        </div>
+        </div>
+    </main>
+
+    <footer class="container text-center my-5">
+     <p>&copy; 2024 - Roberto Mascheti</p>
+    </footer>
 </body>
 </html>
